Oatstodon: Fix wrong background for private mentions
Fixes a regression from fefdc3244cc53573e835009c17f9bc658386639e

--- a/app/javascript/flavours/glitch/styles/oatstodon/diff.scss
+++ b/app/javascript/flavours/glitch/styles/oatstodon/diff.scss
@@ -75,6 +75,18 @@ hr {
   &--first-in-thread {
     border-top: none;
   }
+
+  &.status-direct {
+    background: lighten($ui-base-color, 8%);
+  }
+}
+
+.focusable {
+  &:focus {
+    &.status.status-direct {
+      background: lighten($ui-base-color, 12%);
+    }
+  }
 }
 
 .detailed-status {
